--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npx vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+        "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@react-jvectormap/core": "^1.0.4",
@@ -21,9 +22,13 @@
     "recharts": "^3.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.16",
+    "jsdom": "^27.0.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "vitest": "^3.2.4"
   }
 }
